--- a/RelatorioPMAIIS/RelatorioPMAWeb/WebContent/relatorio/worload.xhtml
+++ b/RelatorioPMAIIS/RelatorioPMAWeb/WebContent/relatorio/worload.xhtml
@@ -260,7 +260,7 @@
 						});  		
 			  		</h:outputScript>  		
 					<div>
-						<p class="sub-titulo2">3.#{statusHost.index+1}.#{statusInstancia.index+1}.#{statusGrafico.index+1} #{g.titulo}</p>
+						<p class="sub-titulo2">3.#{statusHost.index+1}.#{statusGrafico.index+1} #{g.titulo}</p>
 						<h:outputText value="#{g.descricao}" />
 						<br />
 						<h:outputText value="Mês corrente:" rendered="#{g.mesAno == 1 and g.capitulo == 3}"/>
