--- a/RelatorioPMAIIS/RelatorioPMAWeb/WebContent/relatorio/sumario.xhtml
+++ b/RelatorioPMAIIS/RelatorioPMAWeb/WebContent/relatorio/sumario.xhtml
@@ -25,10 +25,10 @@
 					<li>3.#{statusHost.index+1} Host: #{h.host}
 						<ul>
 							<ui:repeat value="#{h.instanciaVO}" var="i" varStatus="statusInstancia">
-							<li>3.#{statusHost.index+1}.#{statusInstancia.index+1} Instância: #{i.instancia}
+							<li>
 								<ul>
 									<ui:repeat value="#{i.graficoVO}" var="g" varStatus="statusGrafico">
-									<li>3.#{statusHost.index+1}.#{statusInstancia.index+1}.#{statusGrafico.index+1} #{g.titulo}</li>
+									<li>3.#{statusHost.index+1}.#{statusGrafico.index+1} #{g.titulo}</li>
 									</ui:repeat>
 								</ul>
 							</li>
